app/assets/stylesheets/forest/partials/_blocks.scss
// Blocks

.block_slots {
  overflow: auto;
}

.block-kind__select2-response__icon {
  line-height: 1.4;
  vertical-align: top;

  .select2-results__option--highlighted & {
    filter: invert(1);
  }
}

[data-collapse-parent] {
  &.collapsed {
    [data-collapse-body] {
      display: none;
    }
  }
}

.collapse-trigger__chevron-down {
  .collapsed & {
    display: none;
  }
}

.collapse-trigger__chevron-up {
  display: none;

  .collapsed & {
    display: block;
  }
}

.nested-fields {
  margin-bottom: map-get($spacers, 3);
}

.block-slot-field-template {
  display: none;
}

.block-slot-field__buttons {
  min-width: 74px;
  text-align: right;
}

.block-slot-field__button--low-priority {
  opacity: 0;
  transition: opacity 0.1s;
}

.block-slot:hover .block-slot-field__button--low-priority {
  opacity: 1;
}

